--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -1,6 +1,8 @@
 - project:
     templates:
       - neutron-tempest-plugin-jobs
+      - openstack-cover-jobs
+      - openstack-lower-constraints-jobs
       - openstack-python-jobs
       - openstack-python35-jobs
       - openstack-python36-jobs
@@ -35,12 +37,10 @@
         - neutron-tempest-dvr-ha-multinode-full
         - neutron-tempest-iptables_hybrid
         - neutron-grenade
-        - openstack-tox-lower-constraints
         - neutron-fullstack-python35
         - ironic-tempest-dsvm-ipa-wholedisk-bios-agent_ipmitool-tinyipa:
             voting: false
             irrelevant-files: *tempest-irrelevant-files
-        - openstack-tox-cover
         - tempest-full:
             irrelevant-files: *tempest-irrelevant-files
     gate:
@@ -54,8 +54,6 @@
         # NOTE(haleyb) revert this as soon as we fix bug 1791989
         # - neutron-grenade-dvr-multinode
         - neutron-grenade
-        - openstack-tox-lower-constraints
-        - openstack-tox-cover
     periodic:
       jobs:
         - neutron-functional
@@ -86,9 +84,6 @@
         - legacy-tempest-dsvm-neutron-full-opensuse-423:
             irrelevant-files: *tempest-irrelevant-files
 
-    post:
-      jobs:
-        - openstack-tox-cover
 - job:
     name: neutron-functional
     parent: legacy-dsvm-base
