Add openstack/placement as a required project for neutron-grenade*
In order to get openstack/placement installed as part of the
neutron grenade jobs, we have to list it as a required project.

Needed by https://review.openstack.org/604454/

Change-Id: I742660f398b52c62503acf00aaf7faa9a5a8650a

--- a/playbooks/legacy/neutron-grenade-dvr-multinode/run.yaml
+++ b/playbooks/legacy/neutron-grenade-dvr-multinode/run.yaml
@@ -32,7 +32,9 @@
           export DEVSTACK_GATE_CONFIGDRIVE=0
           export DEVSTACK_GATE_GRENADE=pullup
           # Test DVR upgrade on multinode
-          export PROJECTS="openstack-dev/grenade $PROJECTS"
+          # Grenade needs to clone the placement repo on the Stein side since
+          # the repo did not exist in Rocky.
+          export PROJECTS="openstack-dev/grenade openstack/placement $PROJECTS"
           export DEVSTACK_GATE_NEUTRON_DVR=1
           export BRANCH_OVERRIDE=default
           if [ "$BRANCH_OVERRIDE" != "default" ] ; then
