--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -206,6 +206,10 @@
       - openstack-dev/grenade
       - openstack-infra/devstack-gate
       - openstack/neutron
+      # openstack/placement is not part of legacy-dsvm-base because that is
+      # branchless and openstack/placement only has a master branch (it is
+      # new as of Stein)
+      - openstack/placement
     nodeset: ubuntu-xenial-2-node
     irrelevant-files: *tempest-irrelevant-files
 
@@ -219,6 +223,10 @@
       - openstack-dev/grenade
       - openstack-infra/devstack-gate
       - openstack/neutron
+      # openstack/placement is not part of legacy-dsvm-base because that is
+      # branchless and openstack/placement only has a master branch (it is
+      # new as of Stein)
+      - openstack/placement
     nodeset: ubuntu-xenial-2-node
     irrelevant-files: *tempest-irrelevant-files
     # NOTE(haleyb) revert this as soon as we fix bug 1791989
@@ -260,6 +268,10 @@
       - openstack-dev/grenade
       - openstack-infra/devstack-gate
       - openstack/neutron
+      # openstack/placement is not part of legacy-dsvm-base because that is
+      # branchless and openstack/placement only has a master branch (it is
+      # new as of Stein)
+      - openstack/placement
     irrelevant-files: *tempest-irrelevant-files
 
 - job:
