--- a/playbooks/legacy/neutron-grenade-multinode/run.yaml
+++ b/playbooks/legacy/neutron-grenade-multinode/run.yaml
@@ -31,7 +31,9 @@
           export DEVSTACK_GATE_NEUTRON=1
           export DEVSTACK_GATE_CONFIGDRIVE=0
           export DEVSTACK_GATE_GRENADE=pullup
-          export PROJECTS="openstack-dev/grenade $PROJECTS"
+          # Grenade needs to clone the placement repo on the Stein side since
+          # the repo did not exist in Rocky.
+          export PROJECTS="openstack-dev/grenade openstack/placement $PROJECTS"
           # Default to non DVR
           export DEVSTACK_GATE_NEUTRON_DVR=0
           export BRANCH_OVERRIDE=default
