Add PortForwarding to neutron.objects entrypoint.
Closes-bug: #1794406
Change-Id: Ifad26642d730456136dfa9177d1c9515fe5ec421

--- a/setup.cfg
+++ b/setup.cfg
@@ -190,6 +190,7 @@ neutron.objects =
     PortBinding = neutron.objects.ports:PortBinding
     PortBindingLevel = neutron.objects.ports:PortBindingLevel
     PortDNS = neutron.objects.ports:PortDNS
+    PortForwarding = neutron.objects.port_forwarding:PortForwarding
     PortSecurity = neutron.objects.port.extensions.port_security:PortSecurity
     ProviderResourceAssociation = neutron.objects.servicetype:ProviderResourceAssociation
     ProvisioningBlock = neutron.objects.provisioning_blocks:ProvisioningBlock
