Disable some pylint checks
Newer pylint added some checks that trigger a lot for this
code base. Turn them off until we are ready to apply the
new rules.  They are:

 - c-extension-no-member (Informational)
 - keyword-arg-before-vararg (Warning)
 - inconsistent-return-statements (Refactor recommendation)

Change-Id: I8c1f72bb334c87d62d47e8296d13c660d6bb5576
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/.pylintrc
+++ b/.pylintrc
@@ -12,6 +12,7 @@ disable=
 # "F" Fatal errors that prevent further processing
  import-error,
 # "I" Informational noise
+ c-extension-no-member,
  locally-disabled,
 # "E" Error for important programming issues (likely bugs)
  access-member-before-definition,
@@ -31,6 +32,7 @@ disable=
  expression-not-assigned,
  fixme,
  global-statement,
+ keyword-arg-before-vararg,
  literal-comparison,
  no-init,
  non-parent-init-called,
@@ -67,6 +69,7 @@ disable=
  consider-merging-isinstance,
  consider-using-ternary,
  duplicate-code,
+ inconsistent-return-statements,
  interface-not-implemented,
  no-else-return,
  no-self-use,
