--- a/neutron/tests/etc/neutron.conf
+++ b/neutron/tests/etc/neutron.conf
@@ -14,8 +14,8 @@ bind_port = 9696
 # Paste configuration file
 api_paste_config = api-paste.ini.test
 
-# The messaging module to use, defaults to kombu.
-rpc_backend = fake
+# The messaging transport URL
+transport_url = 'fake:/'
 
 lock_path = $state_path/lock
 
