Add neutron-status upgrade check command framework
This adds basic framework for neutron-status upgrade check commands.

For now it has only "check_nothing" check implemented.
Real checks can be added to this tool in the future.

Depends-On: https://review.openstack.org/#/c/610061/

Change-Id: Ib08119e1bb8de80856edb6a39769d4bc9d98c587
Story: 2003657
Task: 26144

--- a/setup.cfg
+++ b/setup.cfg
@@ -56,6 +56,7 @@ console_scripts =
     neutron-metering-agent = neutron.cmd.eventlet.services.metering_agent:main
     neutron-sriov-nic-agent = neutron.cmd.eventlet.plugins.sriov_nic_neutron_agent:main
     neutron-sanity-check = neutron.cmd.sanity_check:main
+    neutron-status = neutron.cmd.status:main
 neutron.core_plugins =
     ml2 = neutron.plugins.ml2.plugin:Ml2Plugin
 neutron.service_plugins =
