Make grenade-multinode-dvr job voting again
This job was set to be non-voting and was removed from
gate queue in [1]
It looks that patch [2] which was merged to stable/rocky
recently fixed this issue and this job is working fine again,
so lets make it voting and gating again.

[1] https://review.openstack.org/#/c/602097/
[2] https://review.openstack.org/#/c/595490/

Change-Id: Ied3b7c439056134388b16742448cd1da7ece04cf
Related-Bug: #1791989

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -53,8 +53,7 @@
         - neutron-tempest-linuxbridge
         - neutron-tempest-iptables_hybrid
         - neutron-grenade-multinode
-        # NOTE(haleyb) revert this as soon as we fix bug 1791989
-        # - neutron-grenade-dvr-multinode
+        - neutron-grenade-dvr-multinode
         - neutron-grenade
         - neutron-fullstack-python36
     periodic:
@@ -229,8 +228,6 @@
       - openstack/placement
     nodeset: ubuntu-xenial-2-node
     irrelevant-files: *tempest-irrelevant-files
-    # NOTE(haleyb) revert this as soon as we fix bug 1791989
-    voting: false
 
 - job:
     name: neutron-tempest-dvr-ha-multinode-full
