Use tempest-pg-full
The legacy job legacy-tempest-dsvm-neutron-pg-full is now named
tempest-pg-full - using the new tempest and Zuul v3 frameworks.

Change experimental job to use new job.

Change-Id: I40c93dbb863497173b097ba9112cbaf107d8232c
Depends-On: https://review.openstack.org/609530

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -73,7 +73,7 @@
         - legacy-grenade-dsvm-neutron-forward:
             irrelevant-files: *tempest-irrelevant-files
         - legacy-neutron-dsvm-api-pecan
-        - legacy-tempest-dsvm-neutron-pg-full:
+        - tempest-pg-full:
             irrelevant-files: *tempest-irrelevant-files
         - legacy-tempest-dsvm-neutron-pecan:
             irrelevant-files: *tempest-irrelevant-files
