--- a/tox.ini
+++ b/tox.ini
@@ -157,12 +157,10 @@ commands = sphinx-build -W -b linkcheck doc/source doc/build/linkcheck
 # E128 continuation line under-indented for visual indent
 # H405 multi line docstring summary not separated with an empty line
 # N530 direct neutron imports not allowed
-# TODO(ihrachys) figure out what to do with N534
-# N534 Untranslated exception message
 # TODO(amotoki) check the following new rules should be fixed or ignored
 # E731 do not assign a lambda expression, use a def
 # W504 line break after binary operator
-ignore = E125,E126,E128,E731,H405,N530,N534,W504
+ignore = E125,E126,E128,E731,H405,N530,W504
 # H106: Don't put vim configuration in source files
 # H203: Use assertIs(Not)None to check for None
 # H204: Use assert(Not)Equal to check for equality
