Revert "Add openstack/placement as a required project for neutron-grenade*"
This reverts commit 0014c0c3734e8d344e4a45e127fbd0c86dcfaf3c.

This is handled generically now with this change and its dependency:

  https://review.openstack.org/#/c/606853/

Change-Id: I360211cf60afb5611fb9e77fe6332fa59159708f

--- a/playbooks/legacy/neutron-grenade-multinode/run.yaml
+++ b/playbooks/legacy/neutron-grenade-multinode/run.yaml
@@ -31,9 +31,7 @@
           export DEVSTACK_GATE_NEUTRON=1
           export DEVSTACK_GATE_CONFIGDRIVE=0
           export DEVSTACK_GATE_GRENADE=pullup
-          # Grenade needs to clone the placement repo on the Stein side since
-          # the repo did not exist in Rocky.
-          export PROJECTS="openstack-dev/grenade openstack/placement $PROJECTS"
+          export PROJECTS="openstack-dev/grenade $PROJECTS"
           # Default to non DVR
           export DEVSTACK_GATE_NEUTRON_DVR=0
           export BRANCH_OVERRIDE=default
