--- a/playbooks/legacy/neutron-grenade/run.yaml
+++ b/playbooks/legacy/neutron-grenade/run.yaml
@@ -41,9 +41,7 @@
         cmd: |
           set -e
           set -x
-          # Grenade needs to clone the placement repo on the Stein side since
-          # the repo did not exist in Rocky.
-          export PROJECTS="openstack-dev/grenade openstack/placement $PROJECTS"
+          export PROJECTS="openstack-dev/grenade $PROJECTS"
           export PYTHONUNBUFFERED=true
           export DEVSTACK_GATE_TEMPEST=1
           export DEVSTACK_GATE_GRENADE=pullup
