Increase tempest-full jobs timeout
For jobs:
- tempest-full
- tempest-full-py3

Sometimes we hit timeouts which aren't related
directly to Neutron.
So, as was done for some other jobs in [1] it will also
increase timeout for tempest-full jobs.

This patch adds also our own list of irrelevant files for
tempest-full-py3 job as it wasn't specified before.

[1] https://review.openstack.org/#/c/613234/

Change-Id: I6e56b5f9243cdc29e8a36399ae98f95173e61c98

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -42,6 +42,10 @@
             voting: false
             irrelevant-files: *tempest-irrelevant-files
         - tempest-full:
+            timeout: 10800
+            irrelevant-files: *tempest-irrelevant-files
+        - tempest-full-py3:
+            timeout: 10800
             irrelevant-files: *tempest-irrelevant-files
         - tempest-slow:
             irrelevant-files: *tempest-irrelevant-files
