--- a/setup.cfg
+++ b/setup.cfg
@@ -231,7 +231,8 @@ neutron.objects =
     SubnetServiceType = neutron.objects.subnet:SubnetServiceType
     Tag = neutron.objects.tag:Tag
     Trunk = neutron.objects.trunk:Trunk
-
+neutron.status.upgrade.checks =
+    neutron = neutron.cmd.upgrade_checks.checks:CoreChecks
 
 [extract_messages]
 keywords = _ gettext ngettext l_ lazy_gettext
