Increase timout of gate jobs
In patch [1] timeout for
- tempest-full
- tempest-full-py3
was increaced to 3h.
Unfortunatelly it was done only for check queue.
I forgot to do the same change for jobs in gate queue

This patch adds same change for gate queue.

[1] https://review.openstack.org/#/c/614423/

Change-Id: I263124aa732efea8295313aeff7697b91c00f3f4

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -60,6 +60,10 @@
         - neutron-grenade-dvr-multinode
         - neutron-grenade
         - neutron-fullstack-python36
+        - tempest-full:
+            timeout: 10800
+        - tempest-full-py3:
+            timeout: 10800
     periodic:
       jobs:
         - neutron-functional
