tox: Hide deprecation warnings
Running tox targets on python3 write out a lot of DeprecationWarning,
the idea to hide them comes from this patch:
https://review.openstack.org/611884 from Stephen Finucane.

Change-Id: Id002ced641bba9833a633b331a3aa82ff0252f47

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ setenv = VIRTUAL_ENV={envdir}
          OS_LOG_CAPTURE={env:OS_LOG_CAPTURE:true}
          OS_STDOUT_CAPTURE={env:OS_STDOUT_CAPTURE:true}
          OS_STDERR_CAPTURE={env:OS_STDERR_CAPTURE:true}
-         PYTHONWARNINGS=default::DeprecationWarning
+         PYTHONWARNINGS=default::DeprecationWarning,ignore::DeprecationWarning:site
 passenv = TRACE_FAILONLY GENERATE_HASHES http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY
 usedevelop = True
 install_command =
