--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -77,20 +77,14 @@
         - neutron-fullstack-with-uwsgi
         - neutron-tempest-with-uwsgi
 
+        # TODO(slaweq): we should consider to convert this job to "non-legacy"
+        # one and move it to check queue, at least as non-voting
         - legacy-grenade-dsvm-neutron-linuxbridge-multinode:
             irrelevant-files: *tempest-irrelevant-files
-        - legacy-grenade-dsvm-neutron-forward:
-            irrelevant-files: *tempest-irrelevant-files
-        - legacy-neutron-dsvm-api-pecan
-        - tempest-pg-full:
-            irrelevant-files: *tempest-irrelevant-files
-        - legacy-tempest-dsvm-neutron-pecan:
-            irrelevant-files: *tempest-irrelevant-files
+
         - legacy-tempest-dsvm-neutron-full-centos-7:
             irrelevant-files: *tempest-irrelevant-files
         - legacy-tempest-dsvm-neutron-dvr-multinode-full:
-            irrelevant-files: *tempest-irrelevant-files
-        - legacy-tempest-dsvm-neutron-with-ryu-master:
             irrelevant-files: *tempest-irrelevant-files
         - tempest-full-py3-opensuse150:
             irrelevant-files: *tempest-irrelevant-files
