Add tempest-slow to gate queue
The standards state that if a job is voting in the check queue, it
should also be voting in the gate queue.  The tempest-slow job is voting
in check, so therefore this change adds it to the gate queue.

Change-Id: I4221e587f5afc40304e7efc2dd53e937085d691b

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -65,6 +65,8 @@
             timeout: 10800
         - tempest-full-py3:
             timeout: 10800
+        - tempest-slow:
+            irrelevant-files: *tempest-irrelevant-files
     periodic:
       jobs:
         - neutron-functional
