rally-jobs: Add FloatingIP workloads: assoc/dissoc
As discussed on the neutron-performance meeting [1] floating IP operations
should be covered in the neutron gate rally job. As I set out to write
the missing tests I discovered that some of them were already written
by rally folks. For example see [2]. Keep in mind the test code has been
relocated since to the rally-openstack repository. For example see [3].
They were later added to neutron's rally job definition [4].

Here we add a one more scenario to exercise the floating IP operations
left uncovered by the above changes: associate and dissociate.

[1] http://eavesdrop.openstack.org/meetings/neutron_performance/2018/neutron_performance.2018-10-22-16.02.log.html#l-143
[2] https://review.openstack.org/225223
[3] https://github.com/openstack/rally-openstack/blob/4e4bfc5/rally_openstack/scenarios/neutron/network.py
[4] https://review.openstack.org/620952

Change-Id: Id2e27258f2e9a35bb8123854e098d0822458b314
Depends-On: https://review.openstack.org/624036

--- a/rally-jobs/task-neutron.yaml
+++ b/rally-jobs/task-neutron.yaml
@@ -337,6 +337,21 @@
             quotas:
               neutron:
                 floatingip: -1
+        -
+          scenario:
+            NeutronNetworks.associate_and_dissociate_floating_ips:
+              floating_network: {{ floating_network }}
+          runner:
+            constant:
+              times: 10
+              concurrency: 5
+          contexts:
+            users:
+              tenants: 2
+              users_per_tenant: 3
+            quotas:
+              neutron:
+                floatingip: -1
     -
       title: Security Group Related Scenarios
       workloads:
