Make neutron-tempest-iptable_hybrid job non-voting
Because of bug [1] neutron-tempest-iptables_hybrid job
is failing 100% times.
As we decided on Neutron CI meeting, lets make it non-voting
and remove it from gate queue temporary to unblock all
other patches until this bug will be fixed.

[1] https://bugs.launchpad.net/os-vif/+bug/1807949

Change-Id: Ic3a43629bb924e3ae48b919c6fd518674a530bbb
Related-Bug: 1807949

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -35,7 +35,11 @@
               - ^tools/.*$
               - ^tox.ini$
         - neutron-tempest-dvr-ha-multinode-full
-        - neutron-tempest-iptables_hybrid
+        # NOTE(slaweq): Temporary make this non-voting until bug
+        # https://bugs.launchpad.net/os-vif/+bug/1807949
+        # will be fixed
+        - neutron-tempest-iptables_hybrid:
+            voting: false
         - neutron-grenade
         - ironic-tempest-dsvm-ipa-wholedisk-bios-agent_ipmitool-tinyipa:
             voting: false
@@ -57,7 +61,9 @@
         - neutron-fullstack
         - neutron-tempest-dvr
         - neutron-tempest-linuxbridge
-        - neutron-tempest-iptables_hybrid
+        # NOTE(slaweq): Temporary remove this job from gate queue until
+        # https://bugs.launchpad.net/os-vif/+bug/1807949 will be fixed
+        #- neutron-tempest-iptables_hybrid
         - neutron-grenade-multinode
         - neutron-grenade-dvr-multinode
         - neutron-grenade
