--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -51,6 +51,8 @@
         - networking-ovn-tempest-dsvm-ovs-release:
             voting: false
             irrelevant-files: *tempest-irrelevant-files
+        - grenade-py3:
+            irrelevant-files: *tempest-irrelevant-files
     gate:
       jobs:
         - neutron-functional
@@ -66,6 +68,8 @@
         - tempest-full-py3:
             timeout: 10800
         - tempest-slow:
+            irrelevant-files: *tempest-irrelevant-files
+        - grenade-py3:
             irrelevant-files: *tempest-irrelevant-files
     periodic:
       jobs:
