Revert "Make neutron-tempest-iptable_hybrid job non-voting"
Proper fix in os-vif [1] is already merged and released in
os-vif 1.13.1 so we should be good now.

[1] https://review.openstack.org/#/c/624831/

This reverts commit 462b510c50081464c23d837b6b8d5ad8a1405331.

Change-Id: I3afdeaa7463d05e5cbd2d593715b1e2f25749586

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -35,11 +35,7 @@
               - ^tools/.*$
               - ^tox.ini$
         - neutron-tempest-dvr-ha-multinode-full
-        # NOTE(slaweq): Temporary make this non-voting until bug
-        # https://bugs.launchpad.net/os-vif/+bug/1807949
-        # will be fixed
-        - neutron-tempest-iptables_hybrid:
-            voting: false
+        - neutron-tempest-iptables_hybrid
         - neutron-grenade
         - ironic-tempest-dsvm-ipa-wholedisk-bios-agent_ipmitool-tinyipa:
             voting: false
@@ -61,9 +57,7 @@
         - neutron-fullstack
         - neutron-tempest-dvr
         - neutron-tempest-linuxbridge
-        # NOTE(slaweq): Temporary remove this job from gate queue until
-        # https://bugs.launchpad.net/os-vif/+bug/1807949 will be fixed
-        #- neutron-tempest-iptables_hybrid
+        - neutron-tempest-iptables_hybrid
         - neutron-grenade-multinode
         - neutron-grenade-dvr-multinode
         - neutron-grenade
