--- a/tox.ini
+++ b/tox.ini
@@ -49,6 +49,9 @@ setenv = {[testenv]setenv}
          {[testenv:common]setenv}
          OS_TEST_PATH=./neutron/tests/functional
          OS_LOG_PATH={env:OS_LOG_PATH:/opt/stack/logs}
+# Because of issue with stestr and Python3, we need to avoid too much output
+# to be produced during tests, so we will ignore python warnings here
+         PYTHONWARNINGS=ignore
 deps =
   {[testenv]deps}
   -r{toxinidir}/neutron/tests/functional/requirements.txt
