rally-jobs: Set floating network as a parameter
The option to define the name of floating network enables more
flexibility for using the task file as is.

Change-Id: Icaf9ca6b337a500d3f76521f94244f1932d0e09b
Signed-off-by: Juha Kosonen <juha.kosonen@nokia.com>

--- a/rally-jobs/task-neutron.yaml
+++ b/rally-jobs/task-neutron.yaml
@@ -1,3 +1,5 @@
+{% set floating_network = floating_network or "public" %}
+
 ---
   version: 2
   title: Rally Task for OpenStack Neutron CI
@@ -306,7 +308,7 @@
         -
           scenario:
             NeutronNetworks.create_and_delete_floating_ips:
-              floating_network: "public"
+              floating_network: {{ floating_network }}
               floating_ip_args: {}
           runner:
             constant:
@@ -322,7 +324,7 @@
         -
           scenario:
             NeutronNetworks.create_and_list_floating_ips:
-              floating_network: "public"
+              floating_network: {{ floating_network }}
               floating_ip_args: {}
           runner:
             constant:
