doc: Add policy reference
This is the preparation of migration to DocumendedRuleDefault.

Partially Implements: blueprint neutron-policy-in-code

Change-Id: I1d10f5db43167a04546565545d7d21010d16a808

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ covhtml/
 dist/
 doc/build
 doc/source/_static/config-samples/*.sample
+doc/source/_static/*.policy.yaml.sample
 etc/*.sample
 etc/neutron/plugins/ml2/*.sample
 *.DS_Store
