--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -182,14 +182,16 @@
 
 - job:
     name: neutron-tempest-linuxbridge
-    parent: legacy-dsvm-base
-    run: playbooks/legacy/neutron-tempest-linuxbridge/run.yaml
-    post-run: playbooks/legacy/neutron-tempest-linuxbridge/post.yaml
+    parent: tempest-full-py3
     timeout: 10800
     required-projects:
       - openstack-infra/devstack-gate
       - openstack/neutron
       - openstack/tempest
+    vars:
+      tempest_concurrency: 4
+      devstack_localrc:
+        Q_AGENT: linuxbridge
     irrelevant-files:
       - ^(test-|)requirements.txt$
       - ^.*\.rst$
